# fastfood-kernel

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: bench.py  train_fashion_mnist.py
src/fastfood/: __init__.py  _numpy_reference.py  features.py  fwht.py  fwht_triton.py  transform.py
tests/: test_benchmarks.py  test_device_and_hooks.py  test_fwht.py  test_numpy_parity.py  test_transform.py
