[project]
name = "nbdev-workspace"
version = "0.1.0"
description = "nbdev development environment"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jupyterlab>=4.0.0",
    "nbdev>=2.3.0",
    "jupyterlab-quarto>=0.3.0",
    "ipython>=8.12.0,<8.18.0",  # Pin IPython to avoid strip_ansi issue
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
