[project]
name = "fastfood"
version = "0.1.0"
description = "Fastfood random-feature kernel approximation in PyTorch"
readme = "README.md"
authors = [
    { name = "SE Gyges", email = "segyges@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[project.optional-dependencies]
benchmarks = [
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "benchmark: slower benchmark/timing test (still runs by default)",
    "paper: reproduces a claim from the Fastfood paper",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
]
